# Smart-Guard

./: README.md
MAIN/: CMakeLists.txt
MAIN/include/: ADC.hpp  Cam.hpp  HW_GPIO.hpp  MAP_ADDR.hpp  SHT30.hpp  SOFT_I2C.hpp  Uart.hpp  main.hpp
MAIN/src/: ADC.cpp  Cam.cpp  HW_GPIO.cpp  MAP_ADDR.cpp  Makefile  SHT30.cpp  Uart.cpp  main  main.cpp
video-monitor-client/: CMakeLists.txt  README.md
video-monitor-client/src/: main.cpp
video-monitor-client/src/device/: DeviceManager.cpp  DeviceManager.hpp
video-monitor-client/src/history/: HistoryViewer.cpp  HistoryViewer.hpp
video-monitor-client/src/network/: NetworkManager.cpp  NetworkManager.hpp
video-monitor-client/src/receiver/: VideoReceiver.cpp  VideoReceiver.hpp
video-monitor-client/src/ui/: MainWindow.cpp  MainWindow.hpp
video-monitor-client/src/utils/: Config.cpp  Config.hpp
video-monitor-client/src/video/: VideoStream.cpp  VideoStream.hpp
